gitops-apps/apps/sqctrl/manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sqctrl
  name: sqctrl
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: sqctrl
---
apiVersion: v1
kind: Service
metadata:
  name: sqctrl-jmx-service
spec:
  ports:
    - port: 8000
      protocol: TCP
      targetPort: 8000
  selector:
    app: sqctrl
